--- a/data_analysis.ipynb
+++ b/data_analysis.ipynb
@@ -1216,305 +1216,7 @@
    "outputs": [],
    "source": [
     "# let's get the coordinations of the NTA\n",
-    "\n",
-    "\n",
-    "api_f = open('./api/google-api.txt', 'r')\n",
-    "GOOGLE_MAP_API = api_f.read()\n",
-    "\n",
-    "def get_coordinates(row):\n",
-    "    url = f\"https://maps.googleapis.com/maps/api/geocode/json?address={row}&key={GOOGLE_MAP_API}\"\n",
-    "    response = requests.get(url)\n",
-    "\n",
-    "    data = response.json()\n",
-    "    if data['status'] == \"OK\":\n",
-    "        latitude = data['results'][0]['geometry']['location']['lat']\n",
-    "        longitude = data['results'][0]['geometry']['location']['lng']\n",
-    "        print(f\"Coordinates for {address}: ({latitude}, {longitude})\")\n",
-    "        return [latitude, longitude]\n",
-    "    else:\n",
-    "        print(\"Geocoding failed:\", data['status'])\n",
-    "        return []"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 87,
-   "id": "071a91df-581a-43f0-9857-1b5bfc60d4f2",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Coordinates for Belmont NY USA: (43.2994285, -74.21793260000001)\n",
-      "Coordinates for Belmont NY USA: (40.8863969, -73.84119869999999)\n",
-      "Coordinates for Belmont NY USA: (40.8614567, -73.8852771)\n",
-      "Coordinates for Belmont NY USA: (42.2231241, -78.0344506)\n",
-      "Coordinates for Belmont NY USA: (40.8506558, -73.86652409999999)\n",
-      "Coordinates for Belmont NY USA: (40.8430609, -73.8816001)\n",
-      "Coordinates for Belmont NY USA: (40.8159508, -73.85640479999999)\n",
-      "Coordinates for Belmont NY USA: (40.8464835, -73.7862189)\n",
-      "Coordinates for Belmont NY USA: (40.8738889, -73.82944440000001)\n",
-      "Coordinates for Belmont NY USA: (40.8255863, -73.9184388)\n",
-      "Coordinates for Belmont NY USA: (40.8453781, -73.8909693)\n",
-      "Coordinates for Belmont NY USA: (40.8964814, -73.9023362)\n",
-      "Coordinates for Belmont NY USA: (40.836916, -73.9271294)\n",
-      "Coordinates for Belmont NY USA: (40.8094385, -73.8803315)\n",
-      "Coordinates for Belmont NY USA: (40.8837203, -73.89313899999999)\n",
-      "Coordinates for Belmont NY USA: (40.8833912, -73.9051185)\n",
-      "Coordinates for Belmont NY USA: (40.8711235, -73.8976328)\n",
-      "Coordinates for Belmont NY USA: (40.8653068, -73.8455311)\n",
-      "Coordinates for Belmont NY USA: (40.8248438, -73.8915875)\n",
-      "Coordinates for Belmont NY USA: (40.8151552, -73.9158439)\n",
-      "Coordinates for Belmont NY USA: (40.824545, -73.9104143)\n",
-      "Coordinates for Belmont NY USA: (40.8505298, -73.91554289999999)\n",
-      "Coordinates for Belmont NY USA: (40.8415796, -73.8706949)\n",
-      "Coordinates for Belmont NY USA: (40.8022025, -73.9166051)\n",
-      "Coordinates for Belmont NY USA: (40.7073102, -74.0013413)\n",
-      "Coordinates for Belmont NY USA: (41.4513121, -74.5346103)\n",
-      "Coordinates for Belmont NY USA: (44.7514452, -74.9943641)\n",
-      "Coordinates for Belmont NY USA: (40.8803912, -73.8668996)\n",
-      "Coordinates for Belmont NY USA: (40.8382522, -73.8566087)\n",
-      "Coordinates for Belmont NY USA: (40.8553279, -73.8639594)\n",
-      "Coordinates for Belmont NY USA: (40.8150441, -73.8178959)\n",
-      "Coordinates for Belmont NY USA: (40.8247728, -73.8695889)\n",
-      "Coordinates for Belmont NY USA: (40.8340169, -73.8534026)\n",
-      "Coordinates for Belmont NY USA: (40.8955423, -73.86247650000001)\n",
-      "Coordinates for Belmont NY USA: (40.658459, -73.400078)\n",
-      "Coordinates for Belmont NY USA: (40.8365344, -73.8933509)\n",
-      "Coordinates for Belmont NY USA: (40.79312770000001, -73.88601)\n",
-      "Coordinates for Belmont NY USA: (40.8223585, -73.8072555)\n",
-      "Coordinates for Belmont NY USA: (40.686536, -73.9962255)\n",
-      "Coordinates for Belmont NY USA: (40.5870033, -73.9227554)\n",
-      "Coordinates for Belmont NY USA: (40.5780706, -73.9596565)\n",
-      "Coordinates for Belmont NY USA: (40.5768098, -74.0079781)\n",
-      "Coordinates for Belmont NY USA: (40.6270298, -74.10931409999999)\n",
-      "Coordinates for Belmont NY USA: (40.6004787, -73.9565551)\n",
-      "Coordinates for Belmont NY USA: (40.5968007, -73.9749909)\n",
-      "Coordinates for Belmont NY USA: (40.6038852, -74.0062078)\n",
-      "Coordinates for Belmont NY USA: (40.6139307, -73.9921833)\n",
-      "Coordinates for Belmont NY USA: (40.6139307, -73.9921833)\n",
-      "Coordinates for Belmont NY USA: (40.6167679, -74.0183)\n",
-      "Coordinates for Belmont NY USA: (40.6263732, -74.0298767)\n",
-      "Coordinates for Belmont NY USA: (40.6526345, -74.0091872)\n",
-      "Coordinates for Belmont NY USA: (41.9950919, -73.87541139999999)\n",
-      "Coordinates for Belmont NY USA: (40.6526345, -74.0091872)\n",
-      "Coordinates for Belmont NY USA: (40.6824166, -73.9319933)\n",
-      "Coordinates for Belmont NY USA: (40.6710672, -73.98142279999999)\n",
-      "Coordinates for Belmont NY USA: (40.7025517, -73.9840165)\n",
-      "Coordinates for Belmont NY USA: (40.6539346, -73.9756567)\n",
-      "Coordinates for Belmont NY USA: (40.6325649, -73.972128)\n",
-      "Coordinates for Belmont NY USA: (40.6414876, -73.9593998)\n",
-      "Coordinates for Belmont NY USA: (40.6204388, -73.95997779999999)\n",
-      "Coordinates for Belmont NY USA: (42.8989582, -75.5121217)\n",
-      "Coordinates for Belmont NY USA: (40.6096768, -73.9114293)\n",
-      "Coordinates for Belmont NY USA: (40.6128772, -73.9683934)\n",
-      "Coordinates for Belmont NY USA: (40.640248, -73.9060662)\n",
-      "Coordinates for Belmont NY USA: (40.6232714, -73.9321664)\n",
-      "Coordinates for Belmont NY USA: (40.6592355, -73.9533895)\n",
-      "Coordinates for Belmont NY USA: (40.6730118, -73.94189659999999)\n",
-      "Coordinates for Belmont NY USA: (40.6694022, -73.9422324)\n",
-      "Coordinates for Belmont NY USA: (40.6774196, -73.9668408)\n",
-      "Coordinates for Belmont NY USA: (40.6920638, -73.97418739999999)\n",
-      "Coordinates for Belmont NY USA: (40.6896834, -73.9661144)\n",
-      "Coordinates for Belmont NY USA: (40.7081156, -73.9570696)\n",
-      "Coordinates for Belmont NY USA: (43.2994285, -74.21793260000001)\n",
-      "Coordinates for Belmont NY USA: (41.204262, -73.6437397)\n",
-      "Coordinates for Belmont NY USA: (40.7304701, -73.95150319999999)\n",
-      "Coordinates for Belmont NY USA: (40.6957755, -73.9170604)\n",
-      "Coordinates for Belmont NY USA: (40.6957755, -73.9170604)\n",
-      "Coordinates for Belmont NY USA: (40.6782737, -73.9108212)\n",
-      "Coordinates for Belmont NY USA: (40.665214, -73.9125304)\n",
-      "Coordinates for Belmont NY USA: (40.7127753, -74.0059728)\n",
-      "Coordinates for Belmont NY USA: (40.6762144, -73.88708059999999)\n",
-      "Coordinates for Belmont NY USA: (40.6584679, -73.8904449)\n",
-      "Coordinates for Belmont NY USA: (40.6350319, -73.9921028)\n",
-      "Coordinates for Belmont NY USA: (40.7141953, -73.9316461)\n",
-      "Coordinates for Belmont NY USA: (40.6374378, -73.9465738)\n",
-      "Coordinates for Belmont NY USA: (40.6484272, -73.88236119999999)\n",
-      "Coordinates for Belmont NY USA: (40.7127753, -74.0059728)\n",
-      "Coordinates for Belmont NY USA: (40.65281299999999, -73.9199721)\n",
-      "Coordinates for Belmont NY USA: (40.6880111, -73.8797751)\n",
-      "Coordinates for Belmont NY USA: (40.8747631, -73.9121515)\n",
-      "Coordinates for Belmont NY USA: (40.8089419, -73.9482305)\n",
-      "Coordinates for Belmont NY USA: (40.8252793, -73.94761390000001)\n",
-      "Coordinates for Belmont NY USA: (40.8169443, -73.9558333)\n",
-      "Coordinates for Belmont NY USA: (40.8105443, -73.9620581)\n",
-      "Coordinates for Belmont NY USA: (40.8089419, -73.9482305)\n",
-      "Coordinates for Belmont NY USA: (40.7870106, -73.9753676)\n",
-      "Coordinates for Belmont NY USA: (40.7358633, -73.9910835)\n",
-      "Coordinates for Belmont NY USA: (40.7741769, -73.98491179999999)\n",
-      "Coordinates for Belmont NY USA: (43.0484029, -75.3785034)\n",
-      "Coordinates for Belmont NY USA: (40.7521795, -73.9875438)\n",
-      "Coordinates for Belmont NY USA: (40.7571432, -73.9718815)\n",
-      "Coordinates for Belmont NY USA: (40.7434057, -73.9795827)\n",
-      "Coordinates for Belmont NY USA: (40.7367783, -73.9844722)\n",
-      "Coordinates for Belmont NY USA: (40.7264773, -73.98153370000001)\n",
-      "Coordinates for Belmont NY USA: (40.73468, -74.0047554)\n",
-      "Coordinates for Belmont NY USA: (40.7191413, -73.9973273)\n",
-      "Coordinates for Belmont NY USA: (40.7115786, -74.0158441)\n",
-      "Coordinates for Belmont NY USA: (40.7157509, -73.9970307)\n",
-      "Coordinates for Belmont NY USA: (40.715033, -73.9842724)\n",
-      "Coordinates for Belmont NY USA: (40.7662315, -73.9602312)\n",
-      "Coordinates for Belmont NY USA: (43.1128475, -75.2709991)\n",
-      "Coordinates for Belmont NY USA: (40.7957399, -73.93892129999999)\n",
-      "Coordinates for Belmont NY USA: (40.7957399, -73.93892129999999)\n",
-      "Coordinates for Belmont NY USA: (40.852476, -73.9342996)\n",
-      "Coordinates for Belmont NY USA: (40.8417082, -73.9393554)\n",
-      "Coordinates for Belmont NY USA: (40.7844653, -73.9550857)\n",
-      "Coordinates for Belmont NY USA: (40.7316903, -73.9778494)\n",
-      "Coordinates for Belmont NY USA: (40.759948, -73.991006)\n",
-      "Coordinates for Belmont NY USA: (40.6804703, -73.7920918)\n",
-      "Coordinates for Belmont NY USA: (40.6715916, -73.779798)\n",
-      "Coordinates for Belmont NY USA: (40.6715916, -73.779798)\n",
-      "Coordinates for Belmont NY USA: (40.6575584, -73.7330753)\n",
-      "Coordinates for Belmont NY USA: (40.7179512, -73.783822)\n",
-      "Coordinates for Belmont NY USA: (40.7112203, -73.762495)\n",
-      "Coordinates for Belmont NY USA: (40.6895283, -73.76436880000001)\n",
-      "Coordinates for Belmont NY USA: (40.5754846, -73.8507279)\n",
-      "Coordinates for Belmont NY USA: (40.5942276, -73.7742616)\n",
-      "Coordinates for Belmont NY USA: (40.5998931, -73.74484369999999)\n",
-      "Coordinates for Belmont NY USA: (40.718106, -73.8448469)\n",
-      "Coordinates for Belmont NY USA: (40.72557219999999, -73.8624893)\n",
-      "Coordinates for Belmont NY USA: (40.7016662, -73.8842219)\n",
-      "Coordinates for Belmont NY USA: (40.7043986, -73.9018292)\n",
-      "Coordinates for Belmont NY USA: (40.717372, -73.87425)\n",
-      "Coordinates for Belmont NY USA: (40.7647238, -73.8306716)\n",
-      "Coordinates for Belmont NY USA: (40.786395, -73.8389657)\n",
-      "Coordinates for Belmont NY USA: (40.7449859, -73.8642613)\n",
-      "Coordinates for Belmont NY USA: (40.7543725, -73.8669188)\n",
-      "Coordinates for Belmont NY USA: (40.7660427, -73.8758704)\n",
-      "Coordinates for Belmont NY USA: (40.7556818, -73.8830701)\n",
-      "Coordinates for Belmont NY USA: (40.73940350000001, -73.8779431)\n",
-      "Coordinates for Belmont NY USA: (40.7294018, -73.9065883)\n",
-      "Coordinates for Belmont NY USA: (40.7294018, -73.9065883)\n",
-      "Coordinates for Belmont NY USA: (40.692158, -73.7330753)\n",
-      "Coordinates for Belmont NY USA: (40.7282239, -73.7948516)\n",
-      "Coordinates for Belmont NY USA: (40.7135548, -73.796488)\n",
-      "Coordinates for Belmont NY USA: (40.7246203, -73.8207637)\n",
-      "Coordinates for Belmont NY USA: (40.732341, -73.81077239999999)\n",
-      "Coordinates for Belmont NY USA: (40.7335179, -73.7801447)\n",
-      "Coordinates for Belmont NY USA: (40.7408584, -73.758241)\n",
-      "Coordinates for Belmont NY USA: (40.72437070000001, -73.71540139999999)\n",
-      "Coordinates for Belmont NY USA: (40.7486472, -73.7125258)\n",
-      "Coordinates for Belmont NY USA: (40.7547659, -73.7299431)\n",
-      "Coordinates for Belmont NY USA: (40.7525044, -73.764518)\n",
-      "Coordinates for Belmont NY USA: (40.7814336, -73.7782051)\n",
-      "Coordinates for Belmont NY USA: (40.7577672, -73.78339609999999)\n",
-      "Coordinates for Belmont NY USA: (40.7920449, -73.8095574)\n",
-      "Coordinates for Belmont NY USA: (40.73940350000001, -73.8779431)\n",
-      "Coordinates for Belmont NY USA: (40.7478792, -73.9756567)\n",
-      "Coordinates for Belmont NY USA: (40.7540534, -73.8086418)\n",
-      "Coordinates for Belmont NY USA: (40.6901366, -73.8566087)\n",
-      "Coordinates for Belmont NY USA: (40.6999853, -73.8310309)\n",
-      "Coordinates for Belmont NY USA: (40.6764003, -73.8124984)\n",
-      "Coordinates for Belmont NY USA: (40.6806669, -73.844659)\n",
-      "Coordinates for Belmont NY USA: (40.6646149, -73.8498968)\n",
-      "Coordinates for Belmont NY USA: (40.705695, -73.8272029)\n",
-      "Coordinates for Belmont NY USA: (40.7037439, -73.7991953)\n",
-      "Coordinates for Belmont NY USA: (40.7445911, -73.8258135)\n",
-      "Coordinates for Belmont NY USA: (40.7532704, -73.9068858)\n",
-      "Coordinates for Belmont NY USA: (40.67764, -73.7447853)\n",
-      "Coordinates for Belmont NY USA: (40.7556711, -73.9456723)\n",
-      "Coordinates for Belmont NY USA: (40.7643574, -73.92346189999999)\n",
-      "Coordinates for Belmont NY USA: (40.7643574, -73.92346189999999)\n",
-      "Coordinates for Belmont NY USA: (40.7745459, -73.9037477)\n",
-      "Coordinates for Belmont NY USA: (40.6848044, -73.78222509999999)\n",
-      "Coordinates for Belmont NY USA: (41.4984032, -74.1008627)\n",
-      "Coordinates for Belmont NY USA: (40.7104687, -73.8847407)\n",
-      "Coordinates for Belmont NY USA: (40.5232804, -74.20032309999999)\n",
-      "Coordinates for Belmont NY USA: (40.5847957, -74.16034840000002)\n",
-      "Coordinates for Belmont NY USA: (40.616296, -74.1386767)\n",
-      "Coordinates for Belmont NY USA: (40.6189726, -74.0784785)\n",
-      "Coordinates for Belmont NY USA: (40.5201055, -74.22931129999999)\n",
-      "Coordinates for Belmont NY USA: (40.6409366, -74.1801442)\n",
-      "Coordinates for Belmont NY USA: (40.6012117, -74.0579185)\n",
-      "Coordinates for Belmont NY USA: (40.6270298, -74.10931409999999)\n",
-      "Coordinates for Belmont NY USA: (40.6074525, -74.0963115)\n",
-      "Coordinates for Belmont NY USA: (40.5526053, -74.1143087)\n",
-      "Coordinates for Belmont NY USA: (40.6339267, -74.13606519999999)\n",
-      "Coordinates for Belmont NY USA: (40.5487944, -74.2107848)\n",
-      "Coordinates for Belmont NY USA: (45.0655212, -93.2018908)\n",
-      "Coordinates for Belmont NY USA: (40.5903824, -74.06680759999999)\n",
-      "Coordinates for Belmont NY USA: (40.6288778, -74.0784785)\n",
-      "Coordinates for Belmont NY USA: (40.5739937, -74.1159755)\n",
-      "Coordinates for Belmont NY USA: (40.556413, -74.1735044)\n",
-      "Coordinates for Belmont NY USA: (40.5543273, -74.156292)\n",
-      "Coordinates for Belmont NY USA: (40.5649434, -74.1450002)\n"
-     ]
-    }
-   ],
-   "source": [
-    "df_nta['lat_long'] = df_nta.USA_NTA_Address.apply(lambda x: get_coordinates(x))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 88,
-   "id": "e4fe405b-952a-4b69-a595-372998cbd1e2",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Address Borough</th>\n",
-       "      <th>NTA</th>\n",
-       "      <th>NTA_Name</th>\n",
-       "      <th>Total_Pop_2000</th>\n",
-       "      <th>Total_Pop_2010</th>\n",
-       "      <th>Num_Change_Pop_2010_2020</th>\n",
-       "      <th>Pct_Change_Pop_2010_2020</th>\n",
-       "      <th>USA_NTA_Address</th>\n",
-       "      <th>lat_long</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "Empty DataFrame\n",
-       "Columns: [Address Borough, NTA, NTA_Name, Total_Pop_2000, Total_Pop_2010, Num_Change_Pop_2010_2020, Pct_Change_Pop_2010_2020, USA_NTA_Address, lat_long]\n",
-       "Index: []"
-      ]
-     },
-     "execution_count": 88,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# any missing data\n",
-    "df_nta[df_nta.lat_long.isnull()].sum()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 89,
-   "id": "eadde45e-6058-49ba-abce-bede2c7821af",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df_nta.to_csv('./data/NTA_lat_long_not_permitted.csv')"
+    "# programmic access is not allowed - we cannot use google API"
    ]
   },
   {
