--- a/recommend_location_analysis.ipynb
+++ b/recommend_location_analysis.ipynb
@@ -3286,7 +3286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 296,
+   "execution_count": 299,
    "id": "9ee3616f-5a79-4ea3-99fa-b39ce0039154",
    "metadata": {},
    "outputs": [],
@@ -3296,7 +3296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 297,
+   "execution_count": 300,
    "id": "f155d85e-f3e4-4808-bf3f-e9dbec77a6c3",
    "metadata": {},
    "outputs": [
@@ -3326,20 +3326,299 @@
        "Name: 56, dtype: object"
       ]
      },
-     "execution_count": 297,
+     "execution_count": 300,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "nyc_label_0_filterd = nyc_label_0_filterd.loc[nyc_label_0_filterd.People_Per_Shop.idxmax()]\n",
-    "nyc_label_0_filterd"
+    "nyc_label_0_filterd.loc[nyc_label_0_filterd.People_Per_Shop.idxmax()]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 301,
+   "id": "6df40577-cfe5-456c-a4fd-6ac4bc929411",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>index</th>\n",
+       "      <th>Pop_Total_25_44</th>\n",
+       "      <th>Pop_Pct_25_44</th>\n",
+       "      <th>Pop_Pct_Hisp_Latin</th>\n",
+       "      <th>Pop_Pct_Non_Hisp_Latin</th>\n",
+       "      <th>Pop_Pct_Employ</th>\n",
+       "      <th>Pop_Pct_Earn_75_99</th>\n",
+       "      <th>Mean_Household_Income</th>\n",
+       "      <th>Pop_Pct_Healthy</th>\n",
+       "      <th>Pop_Pct_With_Car</th>\n",
+       "      <th>House_Median</th>\n",
+       "      <th>Rent_Median</th>\n",
+       "      <th>Pop_Pct_with_Family</th>\n",
+       "      <th>Pop_Pct_With_Degree</th>\n",
+       "      <th>shop_count</th>\n",
+       "      <th>label</th>\n",
+       "      <th>GeoID</th>\n",
+       "      <th>GeogName</th>\n",
+       "      <th>Borough</th>\n",
+       "      <th>People_Per_Shop</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>39</th>\n",
+       "      <td>88</td>\n",
+       "      <td>6433</td>\n",
+       "      <td>0.249942</td>\n",
+       "      <td>0.119046</td>\n",
+       "      <td>0.880954</td>\n",
+       "      <td>0.590990</td>\n",
+       "      <td>0.148183</td>\n",
+       "      <td>103424.0</td>\n",
+       "      <td>0.906985</td>\n",
+       "      <td>0.896221</td>\n",
+       "      <td>576588.0</td>\n",
+       "      <td>1743.0</td>\n",
+       "      <td>0.694031</td>\n",
+       "      <td>0.484399</td>\n",
+       "      <td>5</td>\n",
+       "      <td>0</td>\n",
+       "      <td>QN45</td>\n",
+       "      <td>Douglas Manor-Douglaston-Little Neck</td>\n",
+       "      <td>Queens</td>\n",
+       "      <td>1286</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>82</th>\n",
+       "      <td>164</td>\n",
+       "      <td>6537</td>\n",
+       "      <td>0.240818</td>\n",
+       "      <td>0.218309</td>\n",
+       "      <td>0.781691</td>\n",
+       "      <td>0.543954</td>\n",
+       "      <td>0.162954</td>\n",
+       "      <td>114400.0</td>\n",
+       "      <td>0.955554</td>\n",
+       "      <td>0.728192</td>\n",
+       "      <td>316903.0</td>\n",
+       "      <td>1558.0</td>\n",
+       "      <td>0.541464</td>\n",
+       "      <td>0.585293</td>\n",
+       "      <td>4</td>\n",
+       "      <td>0</td>\n",
+       "      <td>BX22</td>\n",
+       "      <td>North Riverdale-Fieldston-Riverdale</td>\n",
+       "      <td>The Bronx</td>\n",
+       "      <td>1634</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>62</th>\n",
+       "      <td>133</td>\n",
+       "      <td>6810</td>\n",
+       "      <td>0.237299</td>\n",
+       "      <td>0.070562</td>\n",
+       "      <td>0.929438</td>\n",
+       "      <td>0.566431</td>\n",
+       "      <td>0.131069</td>\n",
+       "      <td>111603.0</td>\n",
+       "      <td>0.977986</td>\n",
+       "      <td>0.947752</td>\n",
+       "      <td>561305.0</td>\n",
+       "      <td>1139.0</td>\n",
+       "      <td>0.807792</td>\n",
+       "      <td>0.337119</td>\n",
+       "      <td>4</td>\n",
+       "      <td>0</td>\n",
+       "      <td>SI01</td>\n",
+       "      <td>Annadale-Huguenot-Prince's Bay-Eltingville</td>\n",
+       "      <td>Staten Island</td>\n",
+       "      <td>1702</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>43</th>\n",
+       "      <td>98</td>\n",
+       "      <td>5287</td>\n",
+       "      <td>0.226482</td>\n",
+       "      <td>0.092872</td>\n",
+       "      <td>0.907128</td>\n",
+       "      <td>0.541624</td>\n",
+       "      <td>0.163012</td>\n",
+       "      <td>99771.0</td>\n",
+       "      <td>0.929732</td>\n",
+       "      <td>0.893798</td>\n",
+       "      <td>463320.0</td>\n",
+       "      <td>1512.0</td>\n",
+       "      <td>0.600443</td>\n",
+       "      <td>0.410323</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>QN44</td>\n",
+       "      <td>Glen Oaks-Floral Park-New Hyde Park</td>\n",
+       "      <td>Queens</td>\n",
+       "      <td>1762</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>61</th>\n",
+       "      <td>130</td>\n",
+       "      <td>7754</td>\n",
+       "      <td>0.249405</td>\n",
+       "      <td>0.142522</td>\n",
+       "      <td>0.857478</td>\n",
+       "      <td>0.564573</td>\n",
+       "      <td>0.125563</td>\n",
+       "      <td>98714.0</td>\n",
+       "      <td>0.880378</td>\n",
+       "      <td>0.890932</td>\n",
+       "      <td>663953.0</td>\n",
+       "      <td>1632.0</td>\n",
+       "      <td>0.737786</td>\n",
+       "      <td>0.360989</td>\n",
+       "      <td>4</td>\n",
+       "      <td>0</td>\n",
+       "      <td>QN49</td>\n",
+       "      <td>Whitestone</td>\n",
+       "      <td>Queens</td>\n",
+       "      <td>1938</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>63</th>\n",
+       "      <td>134</td>\n",
+       "      <td>6805</td>\n",
+       "      <td>0.274462</td>\n",
+       "      <td>0.096475</td>\n",
+       "      <td>0.903525</td>\n",
+       "      <td>0.570162</td>\n",
+       "      <td>0.147961</td>\n",
+       "      <td>110587.0</td>\n",
+       "      <td>0.938116</td>\n",
+       "      <td>0.910312</td>\n",
+       "      <td>574514.0</td>\n",
+       "      <td>1213.0</td>\n",
+       "      <td>0.771098</td>\n",
+       "      <td>0.326976</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>SI11</td>\n",
+       "      <td>Charleston-Richmond Valley-Tottenville</td>\n",
+       "      <td>Staten Island</td>\n",
+       "      <td>2268</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>56</th>\n",
+       "      <td>123</td>\n",
+       "      <td>7529</td>\n",
+       "      <td>0.274161</td>\n",
+       "      <td>0.084335</td>\n",
+       "      <td>0.915665</td>\n",
+       "      <td>0.645555</td>\n",
+       "      <td>0.167739</td>\n",
+       "      <td>96902.0</td>\n",
+       "      <td>0.928966</td>\n",
+       "      <td>0.859037</td>\n",
+       "      <td>422711.0</td>\n",
+       "      <td>1604.0</td>\n",
+       "      <td>0.828849</td>\n",
+       "      <td>0.268086</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>QN05</td>\n",
+       "      <td>Rosedale</td>\n",
+       "      <td>Queens</td>\n",
+       "      <td>3764</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    index  Pop_Total_25_44  Pop_Pct_25_44  Pop_Pct_Hisp_Latin  \\\n",
+       "39     88             6433       0.249942            0.119046   \n",
+       "82    164             6537       0.240818            0.218309   \n",
+       "62    133             6810       0.237299            0.070562   \n",
+       "43     98             5287       0.226482            0.092872   \n",
+       "61    130             7754       0.249405            0.142522   \n",
+       "63    134             6805       0.274462            0.096475   \n",
+       "56    123             7529       0.274161            0.084335   \n",
+       "\n",
+       "    Pop_Pct_Non_Hisp_Latin  Pop_Pct_Employ  Pop_Pct_Earn_75_99  \\\n",
+       "39                0.880954        0.590990            0.148183   \n",
+       "82                0.781691        0.543954            0.162954   \n",
+       "62                0.929438        0.566431            0.131069   \n",
+       "43                0.907128        0.541624            0.163012   \n",
+       "61                0.857478        0.564573            0.125563   \n",
+       "63                0.903525        0.570162            0.147961   \n",
+       "56                0.915665        0.645555            0.167739   \n",
+       "\n",
+       "    Mean_Household_Income  Pop_Pct_Healthy  Pop_Pct_With_Car  House_Median  \\\n",
+       "39               103424.0         0.906985          0.896221      576588.0   \n",
+       "82               114400.0         0.955554          0.728192      316903.0   \n",
+       "62               111603.0         0.977986          0.947752      561305.0   \n",
+       "43                99771.0         0.929732          0.893798      463320.0   \n",
+       "61                98714.0         0.880378          0.890932      663953.0   \n",
+       "63               110587.0         0.938116          0.910312      574514.0   \n",
+       "56                96902.0         0.928966          0.859037      422711.0   \n",
+       "\n",
+       "    Rent_Median  Pop_Pct_with_Family  Pop_Pct_With_Degree  shop_count  label  \\\n",
+       "39       1743.0             0.694031             0.484399           5      0   \n",
+       "82       1558.0             0.541464             0.585293           4      0   \n",
+       "62       1139.0             0.807792             0.337119           4      0   \n",
+       "43       1512.0             0.600443             0.410323           3      0   \n",
+       "61       1632.0             0.737786             0.360989           4      0   \n",
+       "63       1213.0             0.771098             0.326976           3      0   \n",
+       "56       1604.0             0.828849             0.268086           2      0   \n",
+       "\n",
+       "   GeoID                                    GeogName        Borough  \\\n",
+       "39  QN45        Douglas Manor-Douglaston-Little Neck         Queens   \n",
+       "82  BX22         North Riverdale-Fieldston-Riverdale      The Bronx   \n",
+       "62  SI01  Annadale-Huguenot-Prince's Bay-Eltingville  Staten Island   \n",
+       "43  QN44         Glen Oaks-Floral Park-New Hyde Park         Queens   \n",
+       "61  QN49                                  Whitestone         Queens   \n",
+       "63  SI11      Charleston-Richmond Valley-Tottenville  Staten Island   \n",
+       "56  QN05                                    Rosedale         Queens   \n",
+       "\n",
+       "    People_Per_Shop  \n",
+       "39             1286  \n",
+       "82             1634  \n",
+       "62             1702  \n",
+       "43             1762  \n",
+       "61             1938  \n",
+       "63             2268  \n",
+       "56             3764  "
+      ]
+     },
+     "execution_count": 301,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nyc_label_0_filterd.sort_values('People_Per_Shop')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6df40577-cfe5-456c-a4fd-6ac4bc929411",
+   "id": "c1265681-829b-4736-a0d5-21bb0052edcd",
    "metadata": {},
    "outputs": [],
    "source": []
