--- a/recommend_location.ipynb
+++ b/recommend_location.ipynb
@@ -2532,8 +2532,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 401,
    "id": "d6f8e45d-d52f-4082-bf43-ca6c0b5f58c6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "index                                   67\n",
+       "Pop_Total_25_44                      34367\n",
+       "Pop_Pct_25_44                     0.422833\n",
+       "Pop_Male                          0.430227\n",
+       "Pop_Female                        0.569773\n",
+       "Median_Age                            38.1\n",
+       "Pop_Pct_Hisp_Latin                0.103386\n",
+       "Pop_Pct_Non_Hisp_Latin            0.896614\n",
+       "Pop_Pct_White                     0.745934\n",
+       "Pop_Pct_Black                     0.030685\n",
+       "Pop_Pct_American                  0.000431\n",
+       "Pop_Pct_Asia                      0.089237\n",
+       "Pop_Pct_Native                    0.001649\n",
+       "Pop_Pct_Employ                    0.718739\n",
+       "Pop_Pct_Employ_Salary             0.858965\n",
+       "Pop_Pct_Household_Earn_75_99      0.117675\n",
+       "Pop_Pct_Family_Earn_75_99         0.083422\n",
+       "Median_Household_Income           150969.0\n",
+       "Median_Family_Income              165223.0\n",
+       "Median_Earning                     72077.0\n",
+       "People_Per_Parking               60.784577\n",
+       "Pop_Pct_Healthy                   0.949504\n",
+       "Pct_Occupied_House                0.913228\n",
+       "Median_Room                            3.1\n",
+       "Median_House                      729638.0\n",
+       "Median_Rent                         2088.0\n",
+       "Pop_Pct_With_Car                   0.27061\n",
+       "Pop_Pct_with_Family               0.384561\n",
+       "Pop_Pct_with_Couple               0.326575\n",
+       "Pop_Pct_With_Degree               0.789317\n",
+       "Shop_Count                              39\n",
+       "People_Per_Shop                 881.205128\n",
+       "GeoID                                 MN32\n",
+       "cluster                                  2\n",
+       "GeogName                         Yorkville\n",
+       "Borough                          Manhattan\n",
+       "Name: 11, dtype: object"
+      ]
+     },
+     "execution_count": 401,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nyc_cluster_result.loc[11]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "eeb90d5c-d79a-49c6-a082-094196351f68",
    "metadata": {},
    "outputs": [],
    "source": []
